UI changes, teacher details better aligned, some bug fixes

--- a/src/components/coursedetails/coursedetails.css
+++ b/src/components/coursedetails/coursedetails.css
@@ -1,3 +1,4 @@
 .coursedetails {
     max-height: 50%;
+    margin-top: 5%;
 }
