--- a/src/components/icicle/icicle.css
+++ b/src/components/icicle/icicle.css
@@ -1,3 +1,3 @@
 #icicle {
-    width: 80%;
+    width: 100%;
 }
